[package]
name = "peeng"
version = "0.1.0"
edition = "2024"
description = "Backend API for peeng, a delivery app"
license = "MIT OR Apache-2.0"
repository = ""
authors = ["jvcByte: jvc8463@gmail.com"]

[dependencies]
actix-cors = "0.7.1"
actix-governor = "0.6"
actix-web = "4.13.0"
argon2 = "0.5.3"
chrono = "0.4.44"
dotenvy = "0.15.7"

entity = {path = "entity"}
env_logger = "0.11.9"
hex = "0.4"
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
log = "0.4.29"
migration = {path = "migration"}
rand_core = { version = "0.6", features = ["std"] }
sea-orm = "1.1.19"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
uuid = { version = "1.22.0", features = ["v4"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
